force-app/main/default/objects/Dummy01__c/Dummy01__c.object-meta.xml
<CustomObject>
    <label>Dummy01</label>
    <nameField>
        <label>Dummy01 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy01</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>