force-app/main/default/objects/Dummy01__c/fields/FooBar015__c.field-meta.xml
<CustomField>
    <fullName>FooBar015__c</fullName>
    <label>FooBar015</label>
    <length>255</length>
    <type>Text</type>
</CustomField>