force-app/main/default/objects/Dummy01__c/fields/FooBar036__c.field-meta.xml
<CustomField>
    <fullName>FooBar036__c</fullName>
    <label>FooBar036</label>
    <length>255</length>
    <type>Text</type>
</CustomField>