force-app/main/default/objects/Dummy01__c/fields/FooBar165__c.field-meta.xml
<CustomField>
    <fullName>FooBar165__c</fullName>
    <label>FooBar165</label>
    <length>255</length>
    <type>Text</type>
</CustomField>